--- a/feedback.html
+++ b/feedback.html
@@ -1,105 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AdBlocker Feedback</title>
   <style>
     body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #f7f8fa;
+      font-family: Arial, sans-serif;
+      background: #f3f4f6;
       margin: 0;
-      padding: 40px 20px;
+      padding: 0;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
     }
 
     .container {
       background: white;
-      max-width: 700px;
-      width: 100%;
+      max-width: 500px;
+      margin: 40px auto;
       padding: 30px;
       border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    h1 {
-      margin-bottom: 0.5em;
-      color: #111827;
-    }
-
-    p {
-      color: #4b5563;
-      margin-bottom: 1.5em;
-    }
-
-    textarea {
-      width: 100%;
-      padding: 12px;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      resize: vertical;
-    }
-
-    button {
-      margin-top: 12px;
-      padding: 12px 24px;
-      background-color: #3b82f6;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #2563eb;
-    }
-
-    .stars {
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-      margin-bottom: 1em;
-    }
-
-    .star {
-      font-size: 2rem;
-      color: #d1d5db;
-      cursor: pointer;
-      transition: color 0.2s;
-    }
-
-    .star:hover,
-    .star.selected {
-      color: gold;
-    }
-
-    .feedback-item {
-      text-align: left;
-      border-top: 1px solid #e5e7eb;
-      padding: 15px 0;
-    }
-
-    small {
-      color: #6b7280;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
     }
 
     .rating-summary {
       display: flex;
       flex-direction: row;
-      gap: 30px;
-      margin-top: 40px;
+      gap: 20px;
       background-color: #1f2937;
       color: #f9fafb;
       padding: 20px;
       border-radius: 16px;
       justify-content: center;
       align-items: center;
+      margin-bottom: 20px;
     }
 
     .rating-score {
@@ -107,7 +41,7 @@
     }
 
     .rating-score .score {
-      font-size: 3rem;
+      font-size: 2.5rem;
       font-weight: bold;
     }
 
@@ -116,16 +50,34 @@
       color: #9ca3af;
     }
 
+    .stars span {
+      font-size: 1.5rem;
+      color: #fbbf24;
+    }
+
+    .half {
+      display: inline-block;
+      position: relative;
+      color: #fbbf24;
+      overflow: hidden;
+      width: 50%;
+    }
+
+    .half + span {
+      position: relative;
+      right: 50%;
+    }
+
     .rating-bars {
       flex: 1;
-      min-width: 200px;
+      min-width: 160px;
     }
 
     .rating-bar {
       display: flex;
       align-items: center;
-      gap: 10px;
-      margin-bottom: 6px;
+      gap: 8px;
+      margin-bottom: 5px;
     }
 
     .rating-bar .bar {
@@ -141,30 +93,52 @@
       height: 100%;
       background-color: #60a5fa;
     }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 10px;
+    }
+
+    textarea {
+      width: 100%;
+      height: 80px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      padding: 10px;
+      resize: none;
+    }
+
+    .feedback {
+      margin-top: 20px;
+    }
+
+    .feedback-item {
+      border-top: 1px solid #e5e7eb;
+      padding: 10px 0;
+    }
+
+    .feedback-item .stars {
+      margin-bottom: 4px;
+    }
+
+    .btn {
+      background-color: #3b82f6;
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
   </style>
-
-  <!-- reCAPTCHA v3 -->
-  <script src="https://www.google.com/recaptcha/api.js?render=6Lft-pUrAAAAALokbwg3S8c27oJggzuHSnjlDoh4"></script>
-
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
-     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
-    <!-- Werbung oben -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5310734846855331"
-         data-ad-slot="4934458362"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <h2>Welcome to AdBlocker Feedback</h2>
+    <p style="text-align:center;">Let us know what you think. Rate us and leave a comment below.</p>
 
-    <h1>Welcome to AdBlocker Feedback</h1>
-    <p>Let us know what you think. Rate us and leave a comment below.</p>
-
-    <!-- Bewertungsauswertung -->
+    <!-- Bewertungsübersicht -->
     <div class="rating-summary" id="rating-summary">
       <div class="rating-score">
         <div id="avg-rating" class="score">0,0</div>
@@ -174,161 +148,108 @@
       <div class="rating-bars" id="rating-bars"></div>
     </div>
 
-    <!-- Bewertungsabgabe -->
-    <div class="stars" id="rating">
-      <span class="star" data-value="1">&#9733;</span>
-      <span class="star" data-value="2">&#9733;</span>
-      <span class="star" data-value="3">&#9733;</span>
-      <span class="star" data-value="4">&#9733;</span>
-      <span class="star" data-value="5">&#9733;</span>
+    <!-- Kommentarbereich -->
+    <div style="text-align: center;">
+      <div class="stars" id="user-stars">
+        <span data-star="1">☆</span>
+        <span data-star="2">☆</span>
+        <span data-star="3">☆</span>
+        <span data-star="4">☆</span>
+        <span data-star="5">☆</span>
+      </div>
+      <textarea id="comment" placeholder="Your comment..."></textarea>
+      <button class="btn" onclick="submitFeedback()">Submit Feedback</button>
     </div>
 
-    <textarea id="comment" rows="6" placeholder="Your comment..."></textarea><br>
-    <button onclick="submitFeedback()">Submit Feedback</button>
-
-    <div id="feedback-list">
-      <h2 style="margin-top: 2em;">Recent Feedback</h2>
-    </div>
-
-    <!-- Werbung unten -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5310734846855331"
-         data-ad-slot="4934458362"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <!-- Feedback-Liste -->
+    <h3>Recent Feedback</h3>
+    <div class="feedback" id="feedback-list"></div>
   </div>
 
-  <!-- Firebase Modular SDK -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, push, get, child } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+  <script>
+    const feedbackData = JSON.parse(localStorage.getItem('feedback') || '[]');
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCfS9qn-B8MZx8gHs7a_TiU8TY5LROeFCA",
-      authDomain: "adblocker-feedback.firebaseapp.com",
-      databaseURL: "https://adblocker-feedback-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "adblocker-feedback",
-      storageBucket: "adblocker-feedback.appspot.com",
-      messagingSenderId: "504023672779",
-      appId: "1:504023672779:web:cf6a9fd51a8f870ae7384e",
-      measurementId: "G-DHFRDS6E62"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
-
-    let selectedRating = 0;
-
-    document.querySelectorAll('.star').forEach(star => {
-      star.addEventListener('click', function () {
-        selectedRating = this.getAttribute('data-value');
-        document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-        for (let i = 0; i < selectedRating; i++) {
-          document.querySelectorAll('.star')[i].classList.add('selected');
+    function renderStars(rating) {
+      let full = Math.floor(rating);
+      let half = rating - full >= 0.5;
+      let html = '';
+      for (let i = 0; i < 5; i++) {
+        if (i < full) {
+          html += '<span>★</span>';
+        } else if (i === full && half) {
+          html += '<span class="half">★</span><span style="color:#e5e7eb">★</span>';
+        } else {
+          html += '<span style="color:#e5e7eb">★</span>';
         }
-      });
-    });
-
-    window.submitFeedback = function () {
-      const comment = document.getElementById('comment').value.trim();
-
-      if (localStorage.getItem("feedbackSent") === "true") {
-        alert("Du hast bereits Feedback abgegeben.");
-        return;
       }
+      return html;
+    }
 
-      if (selectedRating === 0 || comment === '') {
-        alert('Bitte Bewertung und Kommentar angeben.');
-        return;
-      }
+    function updateRatingSummary() {
+      const counts = {1:0, 2:0, 3:0, 4:0, 5:0};
+      let total = feedbackData.length;
+      let sum = 0;
 
-      grecaptcha.ready(() => {
-        grecaptcha.execute('6Lft-pUrAAAAALokbwg3S8c27oJggzuHSnjlDoh4', { action: 'submit_feedback' }).then(token => {
-          push(ref(db, 'feedbacks'), {
-            rating: selectedRating,
-            comment: comment,
-            created_at: new Date().toISOString(),
-            recaptcha_token: token
-          }).then(() => {
-            localStorage.setItem("feedbackSent", "true");
-            document.getElementById('comment').value = '';
-            selectedRating = 0;
-            document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-            loadFeedback();
-            alert("Vielen Dank für dein Feedback!");
-          });
-        });
+      feedbackData.forEach(f => {
+        counts[f.rating]++;
+        sum += f.rating;
       });
+
+      const avg = total > 0 ? sum / total : 0;
+      document.getElementById("avg-rating").innerText = avg.toFixed(1).replace('.', ',');
+      document.getElementById("total-ratings").innerText = `${total} Bewertungen`;
+      document.getElementById("avg-stars").innerHTML = renderStars(avg);
+
+      const bars = document.getElementById("rating-bars");
+      bars.innerHTML = '';
+      const max = Math.max(...Object.values(counts));
+      for (let i = 5; i >= 1; i--) {
+        let percent = total ? (counts[i] / max) * 100 : 0;
+        bars.innerHTML += `
+          <div class="rating-bar">
+            <span>${i}</span>
+            <div class="bar"><div class="fill" style="width:${percent}%"></div></div>
+          </div>`;
+      }
     }
 
     function loadFeedback() {
-      get(child(ref(db), 'feedbacks')).then(snapshot => {
-        const feedbackList = document.getElementById('feedback-list');
-        feedbackList.innerHTML = '<h2>Recent Feedback</h2>';
-        const data = snapshot.val();
-        if (!data) return;
-
-        const ratings = { 1: 0, 2: 0, 3: 0, 4: 0, 5: 0 };
-        let total = 0;
-        let sum = 0;
-
-        Object.values(data).reverse().forEach(item => {
-          const r = parseInt(item.rating);
-          if (ratings[r] !== undefined) {
-            ratings[r]++;
-            total++;
-            sum += r;
-          }
-
-          const div = document.createElement('div');
-          div.className = 'feedback-item';
-          div.innerHTML = `
-            <div class="stars">${'★'.repeat(item.rating)}${'☆'.repeat(5 - item.rating)}</div>
-            <div>${item.comment}</div>
-            <small>${new Date(item.created_at).toLocaleString()}</small>
-          `;
-          feedbackList.appendChild(div);
-        });
-
-        updateRatingSummary(ratings, total, sum);
+      const list = document.getElementById("feedback-list");
+      list.innerHTML = '';
+      feedbackData.slice().reverse().forEach(f => {
+        const time = new Date(f.time).toLocaleString();
+        list.innerHTML += `
+          <div class="feedback-item">
+            <div class="stars">${renderStars(f.rating)}</div>
+            <div>${f.comment}</div>
+            <small>${time}</small>
+          </div>`;
       });
+      updateRatingSummary();
     }
 
-    function updateRatingSummary(ratings, total, sum) {
-      const avg = total > 0 ? (sum / total) : 0;
+    let selectedRating = 0;
+    document.querySelectorAll('#user-stars span').forEach(span => {
+      span.onclick = () => {
+        selectedRating = parseInt(span.dataset.star);
+        document.querySelectorAll('#user-stars span').forEach(s => {
+          s.textContent = parseInt(s.dataset.star) <= selectedRating ? '★' : '☆';
+        });
+      };
+    });
 
-      document.getElementById('avg-rating').textContent = avg.toFixed(1).replace('.', ',');
-      document.getElementById('total-ratings').textContent = `${total.toLocaleString()} Bewertungen`;
-
-      const starsEl = document.getElementById('avg-stars');
-      starsEl.innerHTML = '';
-      const fullStars = Math.floor(avg);
-      const halfStar = avg - fullStars >= 0.5;
-      for (let i = 0; i < 5; i++) {
-        const star = document.createElement('span');
-        star.innerHTML = i < fullStars ? '★' : (i === fullStars && halfStar ? '⯨' : '☆');
-        star.style.color = '#fbbf24';
-        star.style.fontSize = '1.5rem';
-        starsEl.appendChild(star);
-      }
-
-      const barsEl = document.getElementById('rating-bars');
-      barsEl.innerHTML = '';
-      const max = Math.max(...Object.values(ratings)) || 1;
-      for (let i = 5; i >= 1; i--) {
-        const bar = document.createElement('div');
-        bar.className = 'rating-bar';
-        bar.innerHTML = `
-          <span>${i}</span>
-          <div class="bar"><div class="fill" style="width: ${(ratings[i] / max) * 100}%"></div></div>
-        `;
-        barsEl.appendChild(bar);
-      }
+    function submitFeedback() {
+      const comment = document.getElementById("comment").value.trim();
+      if (selectedRating === 0 || !comment) return alert("Bitte Sterne und Kommentar angeben!");
+      feedbackData.push({ rating: selectedRating, comment, time: Date.now() });
+      localStorage.setItem("feedback", JSON.stringify(feedbackData));
+      document.getElementById("comment").value = '';
+      selectedRating = 0;
+      document.querySelectorAll('#user-stars span').forEach(s => s.textContent = '☆');
+      loadFeedback();
     }
 
-    window.onload = loadFeedback;
+    loadFeedback();
   </script>
 </body>
 </html>
